--- a/devfile.yaml
+++ b/devfile.yaml
@@ -4,7 +4,8 @@ metadata:
 components:
   - name: tooling-container
     container:
-      image: ghcr.io/ansible/ansible-devspaces:latest
+      # image: ghcr.io/ansible/ansible-devspaces:latest
+      image: registry.redhat.io/ansible-automation-platform-25/ansible-dev-tools-rhel8:25.5.2-11
       memoryRequest: 256M
       memoryLimit: 6Gi
       cpuRequest: 250m
